fix:node.js.yml

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,29 +1,23 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: GitHub actions coutinuous integration
 
 on:
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-
-    #strategy:
-     # matrix:
-      #  node-version: [18]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+    
+    
     - name: "Install dependencies"
       run: npm install
 
@@ -35,7 +29,7 @@ jobs:
       run: npm run lint
       
     - name: "Run prettier"
-      run: npm run prettier
+      run: npm run prettier --check .
 
     - name: "Test Jest"
       run: npm run test
