--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,14 +10,10 @@ on:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-
-    #strategy:
-     # matrix:
-      #  node-version: [18]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    
     - name: Use Node.js 
       uses: actions/setup-node@v4
       with:
