fix:node.js.yml

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - uses: cd ..
+    - run: cd ~
 
     - name: Use Node.js 
       uses: actions/setup-node@v4
