--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm run lint
       
     - name: "Run prettier"
-      run: npm run prettier
+      run: npm run prettier --check .
 
     - name: "Test Jest"
       run: npm run test
