--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,11 +5,10 @@ name: Node.js CI
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,24 +17,23 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: "Install dependencies"
-      run: npm install
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - name: 'Install dependencies'
+        run: npm install
 
-    
-    - name: "Display time"
-      run: echo "Starting time at $(date + "%H:%M:%S %Z")"
+      - name: 'Display time'
+        run: echo "Starting time at $(date + "%H:%M:%S %Z")"
 
-    - name: "Run lint"
-      run: npm run lint
-      
-    - name: "Run prettier"
-      run: npm run prettier
+      - name: 'Run lint'
+        run: npm run lint
 
-    - name: "Test Jest"
-      run: npm run test
+      - name: 'Run prettier'
+        run: npm run prettier
+
+      - name: 'Test Jest'
+        run: npm run test
