--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,9 @@ jobs:
         run: npm install
 
       - name: 'Display time'
-        run: echo "Starting time at $(RELEASE_DEPLOYMENT_STARTTIME)"
+        run: | 
+              $heureDebut = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
+              echo "Starting time at $heureDebut"
 
       - name: 'Run lint'
         run: npm run lint
