--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,10 +19,10 @@ jobs:
       - name: 'Install dependencies'
         run: npm install
 
-      - name: 'Display time'
+      - name: 'Display time of launch pipeline'
         run: | 
-            $heureDebut = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
-            Write-Host "Heure de début de la pipeline : $heureDebut"
+             heureDebut=$(date +"%Y-%m-%d %H:%M:%S")
+             echo "Heure de début de la pipeline : $heureDebut"
 
       - name: 'Run lint'
         run: npm run lint
