--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run lint
 
       - name: 'Run prettier'
-        run: npm run prettier --check .
+        run: npm run prettier
 
       - name: 'Test Jest'
         run: npm run test
