--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,9 +20,9 @@ jobs:
         run: npm install
 
       - name: 'Display time of launch pipeline'
-        run: | 
+        run:
              heureDebut=$(date +"%Y-%m-%d %H:%M:%S")
-             echo "Heure de début de la pipeline : $heureDebut"
+             echo "Heure de début de la pipeline = $heureDebut"
 
       - name: 'Run lint'
         run: npm run lint
