--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm run prettier --check .
 
       - name: 'Test Jest'
-        run: npm run test
+        run: npm run test -- --coverage
 
       - name: 'Display run well'
         run: echo "PIPELINE SUCCESS WITHOUT ERRORS"
