--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,7 @@ jobs:
       - name: 'Display time when pipeline ends'
         run: |
           timeEnd=$(date +"%H:%M:%S")
-          echo "Heure de début de la pipeline : $timeEnd"
+          echo "Heure de fin de la pipeline : $timeEnd"
 
       - name: 'Display run well'
         run: echo "PIPELINE SUCCESS WITHOUT ERRORS"
