--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "code:fix": "prettier --write . && eslint --fix .",
-    "commit": "cz"
+    "commit": "cz",
+    "build": "webpack ./src/app.js -o dist/"
   },
   "repository": {
     "type": "git",
@@ -38,5 +39,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
