--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm run prettier
 
       - name: 'Test Jest'
-        run: npm run test -- --coverage
+        run: npm run test
 
       - name: 'Build the project'
         run: npm run build
